if(APPLE)
  add_definitions(-DIVPREFIX="/opt/local/")
elseif(UNIX)
  add_definitions(-DIVPREFIX="/usr")
endif()

if (CMAKE_BUILD_TYPE MATCHES DEBUG)
    add_definitions(-DDEBUG)
endif ()

if(BUILD_APPS)
    add_subdirectory(converters)
    add_subdirectory(demos)
    add_subdirectory(nodes)
    add_subdirectory(samples)
    add_subdirectory(tools)
endif()
if(BUILD_EXAMPLES)
    add_subdirectory(examples)
endif()
