if(APPLE)
  add_definitions(-DIVPREFIX="/opt/local/")
elseif(UNIX)
  add_definitions(-DIVPREFIX="/usr")
endif()

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")

if(BUILD_APPS)
    add_subdirectory(converters)
    add_subdirectory(demos)
    add_subdirectory(nodes)
    add_subdirectory(samples)
    add_subdirectory(tools)
endif()
if(BUILD_EXAMPLES)
    add_subdirectory(examples)
endif()
