
set(SOURCES
    models/CyberHeads/README
    models/CyberHeads/josie.iv
    models/CyberHeads/paul.iv
    models/CyberHeads/rikk.iv
    models/README
    models/bird.iv
    models/buildings/Barcelona.iv
    models/buildings/temple.iv
    models/buildings/windmill.iv
    models/chair.iv
    models/chess/bishop.iv
    models/chess/chessboard.iv
    models/chess/king.iv
    models/chess/knight.iv
    models/chess/pawn.iv
    models/chess/queen.iv
    models/chess/rook.iv
    models/diamond.iv
    models/engine.iv
    models/food/apple.iv
    models/food/banana.iv
    models/food/mushroom.iv
    models/food/pear.iv
    models/furniture/ceilingLamp.iv
    models/furniture/table.iv
    models/geography/README
    models/geography/coasts.iv
    models/geography/earth.iv
    models/heart.iv
    models/household/canstick.iv
    models/household/manillaFolder.iv
    models/household/martini.iv
    models/household/mug.iv
    models/household/outlet.iv
    models/household/plant.iv
    models/household/plug.iv
    models/household/pump.iv
    models/household/teapot.iv
    models/household/trackLights.iv
    models/machines/coarseGear.iv
    models/machines/compressor.iv
    models/machines/fineGear.iv
    models/machines/lathe.iv
    models/machines/simpleEngine.iv
    models/machines/simpleMonitor.iv
    models/machines/vise.iv
    models/machines/windTunnel.iv
    models/moon.iv
    models/robots/cubeMan.iv
    models/robots/cylMan.iv
    models/robots/kitMan.iv
    models/robots/roboHand.iv
    models/robots/robotcop.iv
    models/robots/sphereMan.iv
    models/scenes/README
    models/scenes/chesschairs.env
    models/scenes/chesschairs.iv
    models/scenes/curtain.iv
    models/scenes/glider.env
    models/scenes/glider.iv
    models/scenes/stagedancers.env
    models/scenes/stagedancers.iv
    models/sgi/indigo.iv
    models/sgi/logo.iv
    models/sgi/sgilogo.iv
    models/shamrock.iv
    models/shell.iv
    models/simple/10by10.iv
    models/simple/README
    models/simple/axis.iv
    models/simple/cone.iv
    models/simple/cube.iv
    models/simple/cylinder.iv
    models/simple/faceSet.iv
    models/simple/indexedFaceSet.iv
    models/simple/indexedTriangleMesh.iv
    models/simple/quadMesh.iv
    models/simple/sphere.iv
    models/simple/star.iv
    models/simple/tet.iv
    models/simple/text.iv
    models/simple/text3.iv
    models/simple/texture.iv
    models/simple/three.iv
    models/simple/tri.iv
    models/simple/triangleStripSet.iv
    models/slotMachine.iv
    models/spongetri4.iv
    models/star.iv
    models/torus.iv
    models/toys/cannon.iv
    models/toys/dart.iv
    models/toys/jackInTheBox.iv
    models/toys/lavalamp.iv
    models/toys/legoDog.iv
    models/toys/top.iv
    models/vehicles/767.iv
    models/vehicles/aircar.iv
    models/vehicles/f16.iv
    models/vehicles/fiero.iv
    models/vehicles/gunstar.iv
    models/vehicles/kittyHawk.iv
    models/vehicles/spacestation.iv
    models/vehicles/x29.iv
    models/wheel.iv
)

foreach(file ${SOURCES})
    get_filename_component(dir ${file} DIRECTORY)
    install(FILES ${file} DESTINATION share/data/${dir} COMPONENT data)
endforeach()
