add_subdirectory(common)
if (X11_FOUND)
    add_subdirectory(4view)
    add_subdirectory(clock)
    add_subdirectory(ivNodeKitStructure)
    add_subdirectory(ivToInclude)
    add_subdirectory(linkages)
    add_subdirectory(lod)
    add_subdirectory(manip)
    add_subdirectory(motif)
    add_subdirectory(spaceball)
    add_subdirectory(twoDisplays)
    add_subdirectory(viewers)
    add_subdirectory(vortex)
    add_subdirectory(widgets)
endif()
