if (X11_FOUND)
    file(GLOB files "CXX/*.c++")
    foreach(file ${files})
        get_filename_component(basename ${file} NAME)
        string(REPLACE ".c++" "" basename "${basename}")
        add_executable(${basename} ${file})
        target_link_libraries(${basename} Inventor InventorXt GLU)
        install(TARGETS ${basename} DESTINATION bin/examples/Mentor)
    endforeach()
endif()
